@@ -2,6 +2,7 @@
   - Make evil-org-a-greater-org-object (=ar=), evil-org-inner/a-subtree (=iR=, =aR=) text objects linewise. The other text objects remain characterwise.
   - Improvements to =o/O=
   - Bind =org-beginning-to-line= to =0=. Leave =^= mapped to =evil-first-non-blank=.
+  - Improve interaction between evil and =org-special-ctrl-a/e=.
 * Version 0.7
   - A hook is no longer created automatically. The following line of code is from now on required in a user config:
   #+BEGIN_SRC emacs-lisp
